# letters

./: AUDIT-FINDINGS.md  AUDIT-GNOME-GUI-SPEC.md  Cargo.toml  README.md  io.github.hanthor.letters.json  justfile  meson.build  net.codelogistics.letters.json
.github/workflows/: ci.yml  publish-flatpak.yml
data/: io.github.hanthor.letters.desktop.in  io.github.hanthor.letters.gschema.xml  io.github.hanthor.letters.metainfo.xml.in  io.github.hanthor.letters.service.in  net.codelogistics.letters.desktop.in  net.codelogistics.letters.gschema.xml  net.codelogistics.letters.metainfo.xml.in
data/icons/: meson.build
docs/audits/: AUDIT-FINDINGS.md  AUDIT-GNOME-GUI-SPEC.md
po/: LINGUAS  POTFILES.in  ja.po  letters.pot  pl.po
src/: editor.js  export.rs  letters.gresource.xml  main.py  main.rs  meson.build  preferences.blp  preferences.py  shortcuts-dialog.blp  styles.css  window.blp  window.py  window.rs
tests/: test_md_patterns.js  test_preferences.py  test_update_index.py
